# rust-embedded-wsl-probe-rs

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: display.rs  main.rs
